# TaskTracker-Extreme-3000

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  appbar.js  config.example.json  local-settings.example.json  main.js  package-lock.json  package.json  preload.js  version.json
.github/workflows/: build.yml  release.yml
docs/: DECISIONS.md  WHERE_WE_STAND.md
docs/agent-projects/: this-project-template.md
docs/agent-rules/: about-licensing-distribution.md  ai-inference.md  ci-release-distribution.md  context-efficiency.md  core-workflow.md  cross-platform.md  dependencies-assets.md  diagnostics-privacy.md  docs-readme-changelog.md  git-versioning.md  local-rtk.md  long-running-work.md  media-render-export.md  migration-format-safety.md  platform-apple.md  platform-tauri.md  platform-web.md  platform-windows.md  project-philosophy.md  untrusted-input-tools.md  user-data-permissions.md
renderer/: app.js  index.html  kanban.js  notes.js  quickadd.html  quickadd.js  settings.js  styles.css  tickets.js
scripts/: appbar.ps1  bump-build.js  get-workarea.ps1  version-bump.js  version-lib.js  version-sync.js
src-tauri/: Cargo.toml  build.rs  entitlements.ios.plist  nsis-hooks.nsi  tauri.conf.json
src-tauri/capabilities/: default.json  ios.json
src-tauri/src/: ios_bookmark.rs  main.rs  version_manifest.rs
test/: version-scripts.test.js
