[package]
name = "tasktracker-extreme-3000"
version = "2.7.1"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dependencies]
tauri = { version = "2", features = ["image-png"] }
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
keyring = { version = "3", features = ["apple-native", "windows-native"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }

[target.'cfg(not(target_os = "ios"))'.dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-global-shortcut = "2"
notify = "6"
jsonwebtoken = "9"
